@startuml Models
left to right direction
entity Subject{
    id : INTEGER
    ..
    name : STRING
    teacher_id : INTEGER
    classes_id : INTEGER
    chapter_id : INTEGER
    exam_paper_id: INTEGER
    question_id: INTEGER
}


entity Chapter{
    id : INTEGER
    ..
    name : STRING
    subject_id : INTEGER
    examPaper_id : INTEGER
    question_id : INTEGER
}


entity ExamPaper{
    id : INTEGER
    --
    name : STRING
    tag : STRING
    teacher_id : INTEGER
    subject_id : INTEGER
    chapter_id : INTEGER
    question_id : INTEGER
    grade_id : INTEGER
    classes_id : INTEGER
}


entity Question{
    id : INTEGER
    ..
    questionText : STRING
    difficulty : FLOAT
    type : STRING
    teacher_id : INTEGER
    subject_id : INTEGER
    examPaper_id : INTEGER
    chapter_id : INTEGER
    mutiple_choice_id : INTEGER
    fill_in_the_blanks_id : INTEGER
}

entity MutipleChoice{
    id : INTEGER
    ..
    choice1 : STRING
    choice2 : STRING
    choice3 : STRING
    choice4 : STRING
    answer : STRING
    question_id : INTEGER
}

entity FillInTheBlanks{
    id : INTEGER
    ..
    answer : STRING
    question_id : INTEGER
}


entity Role{
    id : INTEGER
    ..
    name : STRING
    user_id : INTEGER
    permission_id : INTEGER
}


entity Permission{
    id : INTEGER
    ..
    name : STRING
    role_id : INTEGER
}


entity UserInfo{
    id : INTEGER
    ..
    username : STRING
    password : STRING
    role_id : INTEGER
    teacher_id : INTEGER
    student_id : INTEGER

}

entity Teacher{
    id : INTEGER
    ..
    teacher_id : INTEGER
    classes_id : INTEGER
    subject_id : INTEGER
    exam_paper_id : INTEGER
    question_id : INTEGER
}


entity Classes{
    id : INTEGER
    ..
    classes_id : INTEGER
    terms : STRING
    studentCount : INTEGER
    subject_id : INTEGER
    teacher_id : INTEGER
    student_grade_id : INTEGER
    student_id : INTEGER
    examPaper_id : INTEGER
}


entity Student{
    id : INTEGER
    ..
    student_id : INTEGER
    grade : INTEGER
    classes_id : INTEGER
}


entity StudentGrade{
    id : INTEGER
    --
    student_id : INTEGER
    classes_id : INTEGER
    examPaper_id : INTEGER
    grade : INTEGER
    examPaper_id : INTEGER
}


entity AnswerRecord{
    id : INTEGER
    --
    choice1Count : INTEGER
    choice2Count : INTEGER
    choice3Count : INTEGER
    choice4Count : INTEGER

}


Role "m" ||--|{ "n" Permission: 角  色 -- 权  限
Role "1" ||-|{ "n" UserInfo: 角  色 -- 用  户
UserInfo "1" ||--|{ "1" Teacher: 用  户 -- 老  师
UserInfo "1" ||-|{ "1" Student: 用  户 -- 学  生
Teacher "1" ||-|{ "n" Classes: 老  师 -- 班  级
Classes "m" }|--|{ "n" Student: 班  级 -- 学  生
Student "n" }|--|{ "1" StudentGrade: 学  生 -- 试  卷  分  数
Classes "n" }|--|{ "1" StudentGrade: 班  级 -- 试  卷  分  数
ExamPaper "n" }|--|{ "1" StudentGrade: 试  卷 -- 试  卷  分  数
Teacher "m" }|--|{ "n" Subject: 老  师 -- 学  科
Subject "1" ||--|{ "n" Chapter: 学  科 -- 章  节
Subject "1" ||-|| "1" Classes: 学  科 -- 班  级
Chapter "1" ||--|{ "n" Question: 章  节 -- 题  目
Question "1" ||--|| "1" MutipleChoice: 问  题 -- 选  择  题
Question "1" ||--|| "1" FillInTheBlanks: 问  题 -- 填  空  题
ExamPaper "m" }|--|{ "n" Question: 试  卷 -- 题  目
@enduml
